# reels-generator

./: .gitignore  CLAUDE.md  README.md  app.py  next-steps.md  pyproject.toml  streamlit_app.py
.claude/skills/improving-python-code-quality/: SKILL.md
.streamlit/: config.toml
examples/: moon.txt  moons.txt  phrases.txt
reels_gen/: cli.py  config.py  frame_composer.py  image_generator.py  input_parser.py  models.py  output_encoder.py  video_assembler.py
reels_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
